Fix white gap to right in text block

--- a/style.scss
+++ b/style.scss
@@ -157,6 +157,7 @@ body {
         .year {
             background-color: gold;
             text-align: center;
+            border-right: 1px solid gold;
         }
     }
 }
